--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ main {
   background-color: #000;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 20;
 }
 
 .logo {
@@ -242,7 +242,6 @@ form input + button:focus-visible {
   display: flex;
   gap: 8px;
   padding: 16px 8px 8px;
-  animation: fromBottom 333ms ease-in-out;
 }
 
 .message .content {
@@ -291,6 +290,94 @@ form input + button:focus-visible {
   color: rgb(32, 130, 241);
 }
 
+/* Achievements */
+
+.achievements {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 16px;
+  justify-content: center;
+}
+
+.achievements .resume {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.achievements .resume hr {
+  margin-bottom: 16px;
+}
+
+.achievement {
+  font-family: "Courier New", Courier, monospace;
+  color: #fff;
+  background: #000;
+  font-size: 1.1rem;
+  display: flex;
+  min-width: 300px;
+  padding: 8px 4px;
+  border-radius: 6px;
+  overflow: visible;
+  border: 0;
+}
+
+.locked {
+  opacity: 0.7;
+}
+
+[popover] {
+  position: fixed;
+  inset: unset;
+  right: 8px;
+  top: 100px;
+  cursor: pointer;
+  animation: fromRight 333ms ease-in-out;
+  transition: top 333ms ease-in-out;
+  border-top-left-radius: 0;
+}
+
+[popover] .achievement-title::before {
+  content: "Achievement unlocked!";
+  display: block;
+  position: absolute;
+  top: -20px;
+  background: #000;
+  padding: 4px 8px;
+  border-radius: 6px;
+  border-bottom-left-radius: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.achievement-image {
+  display: block;
+  text-align: center;
+  font-size: 2rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #fff;
+  border-radius: 3px;
+  transform: rotate(5deg);
+  z-index: 10;
+}
+
+.achievement-text {
+  padding: 4px;
+  margin-left: 4px;
+  align-self: center;
+}
+
+.achievement-title {
+  font-weight: bold;
+}
+
+.achievement-description {
+  margin: 0;
+}
+
 /* Loader */
 .loader {
   --color: rgba(0, 0, 0, 0.5);
@@ -300,6 +387,10 @@ form input + button:focus-visible {
   margin: 4px 0 4px 8px;
   vertical-align: middle;
   animation: loaderContainer 2s cubic-bezier(0.77, 0, 0.175, 1) infinite;
+}
+
+.loading-message .loader {
+  margin-left: -4px;
 }
 
 @keyframes loaderContainer {
@@ -509,6 +600,18 @@ form input + button:focus-visible {
 
   to {
     transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fromRight {
+  from {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0);
     opacity: 1;
   }
 }
